--- a/templates/index.html
+++ b/templates/index.html
@@ -5,17 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>The Great Number Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="{{url_for('static', filename='css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{{url_for('static', filename='css/bootstrap.css')}}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{{url_for('static', filename='css/main.css')}}" />
 </head>
 <body>
     <div class="wrapper">
         <h1>Welcome to the Great Number Game!</h1>
         <p>I am thinking of a number between 1 and 100</p>
         <p>Take a guess</p>
-        <div class="red">Too low!</div>
-        <form action="/guess" method="post">
-            <input type="text" name="guess" id="">
-            <input type="submit" value="Submit">
+        <div class="{{session['display_box']}}">
+            <p>{{session["msg"]}}</p>
+            <form action="/play_again" method="post" class="{{session['play_again']}}">
+                <button type="submit" class="btn btn-primary">Play again!</button>
+            </form>
+        </div>
+        <form action="/guess" method="post" class="{{session['guess-form']}}">
+            <input type="text" name="guess" class="form-control">
+            <input type="submit" value="Submit" class="btn btn-success">
         </form>
     </div>
     
